--- a/nodejs/enzo-app/src/css/globals.css
+++ b/nodejs/enzo-app/src/css/globals.css
@@ -1,5 +1,9 @@
-@import url("./reset.css");
+@import url("/src/css/reset.css");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+body{
+	font-family: 'Roboto', sans-serif;
+}
 
 main{
-    background-color: red;
+	background-color: red;
 }
